--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 	
-The goal of this simulation study is to determine which factors have the greatest influence on epidemic outcomes. Here we are explicitly dividing the factors into two distinct categories: 1) disease ecology and 2) landscape structure.
+The goal of this simulation study is to determine which factors have the greatest influence on epidemic outcomes. Here we are explicitly dividing the factors into two distinct categories: 1) disease ecology and 2) landscape structure. Once all of the 
 
 ## Glossary:
 R0 = basic reproduction number\
@@ -21,30 +21,37 @@ IP = infectious period\
 TA = treatment area (i.e. buffer around infected cell)\
 TT = treatment timing\
 HR =  host removal percentage\
-A1 = Alpha-1 or natural distance scale parameter\
-PE = pesticide efficacy (pesticide is used to encompass (vaccinations, fungicides, pesticides, etc..)
+PE = pesticide efficacy (pesticide is used to encompass (vaccinations, fungicides, pesticides, etc..)\
 PD = pesticide duration (how many time units does the pesticide provide resistance)
+DD = Dispersal kernel scale parameter 
+
 ## Experimental Setup
-
 Run all simulations on a 200 x 200 area. We are keeping total amount of host constant but varying spatial arrangement.
+Run out for 80 time units (5 generations).
 
-### Factorial of Lifecycle Factors (400 combinations)
+### Factorial of Lifecycle Factors (1280 combinations)
 5 B = (1.25, 2, 4, 8, 16)\
-5 P0 = (1, 5, 10, 50, 100) % infection at the epidemic outbreak\
+3 P0 = (1, 10, 20) % infection at the epidemic outbreak\
 4 LP = (2, 4, 8, 16)\
-4 IP = (0.5, 1, 1.5, 2 x LP)
+3 IP = (0.5, 1, 1.5 x LP)\
+3 DD = (2.1, 10, 20)
 
-### Add in Landscape complexity
+### Add in Landscape complexity (9)
+3 LP = (Uniform, random, clumped)\
+3 HA = (10, 30, 50 percent of the total area)
 
-
-### Add in treatment effects
+### Add in treatment effects (16 * 6 = 96)
 #### Timing and size effects (16 combinations)
 4 TT = (1.5, 2.0, 2.5, 3.0 x LP)\
 4 TA = (1, 3, 5, 7 x cell size)
 
-#### Vaccination/Pesticide/Fungicide and host removal effects
-4 PE = (0.95, 0.80, 0.65, 0.50)\
-4 HR = (1.00, 0.75, 0.50, 0.25 in TA but always 1.00 in infected cell)
+#### Vaccination/Pesticide/Fungicide and host removal effects (6 options)
+3 PE = (0.95, 0.75, 0.50)\
+3 HR = (1.00, 0.75, 0.50 in TA but always 1.00 in infected cell)\
+1 PD = 24 days
+
+Total Factorial Combinations = 466,560 
+
 
 ```{r landscapes}
 
